<resources>
    <string name="app_name">MovieApp</string>
    <string name="Title">Titulo</string>
    <string name="Director">Director</string>
    <string name="Genre">Genero</string>
    <string name="Rating">Rating</string>
    <string name="Year">Año</string>
    <string name="Login">Iniciar sesion</string>
    <string name="Register">Registrarse</string>
    <string name="RegisterMessage">¿No tienes cuenta?</string>
    <string name="Password">Contraseña</string>
    <string name="Email">Correo electronico</string>
    <string name="Name">Nombre</string>
    <string name="Age">Edad</string>
    <string name="UploadImage">Cargar imagen</string>
    <string name="SendData">Registrarse</string>
    <string name="addFilm">Añadir pelicula</string>
    <string name="Edit">Editar</string>
    <string name="Save">Guardar</string>
    <string name="add_movie">Añadir pelicula</string>
    <string name="logout">Cerrar sesion</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>